# automaton

./: pyproject.toml
src/automaton/: __main__.py  cli.py  color.py  constants.py  path.py  pdf.py  progress_bar.py  read_url_file.py  subtitles.py  utils.py
src/automaton/apps/cli/: __init__.py  common.py  main.py  table.py
src/automaton/apps/cli/pdf/: cli.py
src/automaton/apps/cli/pokemon/: commands.py  config.py
src/automaton/apps/cli/pokemon/__unbound/: cli.py  commands.py
src/automaton/apps/cli/pokemon/unbound/: __init__.py  cli.py  module.py
src/automaton/apps/cli/series/: cli.py  commands.py
src/automaton/apps/rpc/example/: client.py  server.py
src/automaton/modules/: path.py  text.py
src/automaton/modules/pokemon/core/: __init__.py  pokedex.py  pokemon_factory.py  service.py
src/automaton/modules/pokemon/unbound/infra/sqlite/: pokedex.py
src/automaton/modules/rpc/: handler_register.py  json_rpc_serializer.py  rpc_client.py  rpc_server.py  rpc_socket.py  value_objects.py
src/mp3manager/: file_verify.py
